# uiworkspace

./: LICENSE  README.md  pyproject.toml
docs/: technical-design.md  user-guide.md
src/uiw/: cli.py  constants.py  errors.py  models.py  result.py
src/uiw/commands/: apply_cmd.py  conflicts_cmd.py  diff_cmd.py  doctor_cmd.py  export_cmd.py  info_cmd.py  init_cmd.py  list_cmd.py  new_cmd.py  refresh_cmd.py  remove_cmd.py  svn_main_clear_cmd.py  sync_cmd.py
src/uiw/config/: defaults.py  loader.py  schema.py
src/uiw/infra/: clock.py  fs.py  json_io.py  paths.py  process.py  yaml_io.py
src/uiw/ops/: apply_ops.py  diff_ops.py  doctor_ops.py  export_ops.py  git_ops.py  svn_clear_ops.py  svn_ops.py  sync_ops.py  workspace_ops.py
src/uiw/services/: backup_service.py  log_service.py  status_service.py  workspace_registry.py
src/uiw/ui/: console.py  formatters.py  tables.py
tests/: test_apply_ops.py  test_git_ops.py  test_paths.py  test_registry.py  test_schema.py  test_svn_clear_ops.py  test_sync_ignore_file.py  test_workflow_guards.py
