[project]
name = "uiworkspace"
version = "0.1.0"
description = "SVN + Git worktree local multi-workspace CLI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.16,<1.0",
  "rich>=14.0,<15.0",
  "PyYAML>=6.0,<7.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "ruff>=0.11,<0.12",
]

[project.scripts]
uiw = "uiw.cli:main"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
[tool.ruff.lint]
select = ["E", "F", "I"]
